<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".UploadDataActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="20"
            android:background="@drawable/wave"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="100">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/temp"
                    android:contentDescription="@string/todo"
                    android:padding="4dp"
                    app:srcCompat="@drawable/icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="100">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="65"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="75"
                        android:fontFamily="@font/adamina"
                        android:gravity="center"
                        android:text="Upload Data"
                        android:textAllCaps="false"
                        android:textColor="@color/text_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="25"
                        android:gravity="center|top|start"
                        android:text="@string/version"
                        android:textAllCaps="false"
                        android:textColor="@color/text_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="35"
                    android:gravity="center"
                    android:paddingEnd="20dp"

                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:orientation="vertical"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingBottom="4dp"
            android:weightSum="80">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="9"
                android:orientation="horizontal"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:weightSum="100">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="30"
                    android:gravity="center_vertical"
                    android:text="@string/web_site_url"
                    android:textColor="@color/label_text_color"
                    android:textSize="14sp" />

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/colon"
                    android:textColor="@color/label_text_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewUrl_Default"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="40"
                    android:gravity="center"
                    android:textColor="@color/label_text_color"
                    android:textSize="14sp" />


                <Button
                    android:id="@+id/buttonResetURL"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="28"
                    android:background="@drawable/bg_menu_button"
                    android:orientation="horizontal"
                    android:text="@string/reset_url"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textSize="14sp" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_upload_files"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="62" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="9"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCancel_inFileUpload"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_menu_button"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/buttonUpload_inUploadFiles"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_menu_button"
                    android:text="@string/upload"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>